# InvenBase

./: .dockerignore  .env.docker.example  .gitignore  DOCKER_DEPLOYMENT.md  PLAN_DORABOTOK.md  PROJECT_WEAKNESSES_BACKLOG.md  README.md  REAL_SMOKE_TESTING.md  TESTING.md  docker-compose.smoke.yml  docker-compose.yml  ВКР введение + 2 главы.docx
invenbase-android/: BUILD_INSTRUCTIONS.md  FIREBASE_SETUP.md  PUSH_NOTIFICATIONS_SERVER.md  README.md  gradlew  settings.gradle
invenbase-android/app/: build.gradle  google-services.json  proguard-rules.pro
invenbase-client/: README.md  SUMMARY.md  build-android.bat  build-android.sh  package-lock.json  ИНСТРУКЦИЯ.md
invenbase-server/: .env.example  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  firebase-service-account.json
invenbase-server/migrations/: 20260705000001_init_schema.sql  20260708000002_add_missing_foreign_keys.sql
invenbase-server/sql/: audit_constraints.sql
invenbase-server/src/: app_state.rs  auth.rs  background_tasks.rs  config.rs  database.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs
invenbase-server/src/handlers/: auth.rs  bookings.rs  categories.rs  equipment.rs  groups.rs  logs.rs  mod.rs  notifications.rs  permissions.rs  push.rs  qr.rs  reports.rs  squads.rs  support.rs  users.rs
invenbase-server/src/services/: booking_events.rs  bookings.rs  mod.rs
invenbase-server/static/: admin.html  admin.js  index.html  style.css
invenbase-server/tests/: booking_lifecycle.rs  database_schema.rs
scripts/: test-backend.ps1  test-web-real-smoke.ps1
(+177 files in other folders)
