[package]
name = "kvantoriym-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.6"
actix-multipart = "0.6"
actix-files = "0.6"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
bcrypt = "0.15"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Configuration
dotenv = "0.15"
config = "0.14"

# QR Code generation
qrcode = "0.14"
image = { version = "0.24", features = ["png"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP client for notifications
reqwest = { version = "0.11", features = ["json"] }

# RSA and JWT for FCM HTTP v1 API OAuth tokens
rsa = "0.9"
base64 = "0.22"
sha2 = "0.10"
pem = "3.0"

# Email
lettre = "0.11"
